[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "missingly"
version = "0.1.0"
authors = [
  { name="Ali Sadeghi Aghili", email="alisadeghiaghili@gmail.com" },
]
description = "A comprehensive package for missing data analysis and visualization."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.14.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/alisadeghiaghili/missingly"
"Bug Tracker" = "https://github.com/alisadeghiaghili/missingly/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "furo>=2023.9.10",
    "nbsphinx>=0.9.0",
    "ipykernel"
]
test = [
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["missingly"]
include-package-data = true

[tool.setuptools.package-data]
missingly = ["templates/*.html"]

[tool.setuptools.exclude-package-data]
"*" = ["docs/build/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["missingly", ".git", "__pycache__", "dist", "build", ".tox", ".venv"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::FutureWarning:sklearn",
]
